<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/principal" />

    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/ic_menu_user_black"
        android:title="@string/my_account" />

    <item
        android:title="Categorías"
        android:icon="@drawable/ic_menu_category_black">
        <menu>
            <item
                android:id="@+id/nav_sub_hombres"
                android:icon="@drawable/ic_persona"
                android:title="@string/men" />
            <item
                android:id="@+id/nav_sub_mujer"
                android:icon="@drawable/ic_persona"
                android:title="@string/women" />
            <item
                android:id="@+id/nav_sub_ninhos"
                android:icon="@drawable/ic_persona"
                android:title="@string/boys" />
            <item
                android:id="@+id/nav_sub_bebes"
                android:icon="@drawable/ic_persona"
                android:title="@string/baby" />
        </menu>
    </item>

    <item
        android:id="@+id/nav_orders"
        android:icon="@drawable/ic_menu_orders_black"
        android:title="@string/my_orders" />

    <item
        android:id="@+id/nav_cart"
        android:icon="@drawable/ic_menu_cart_black"
        android:title="@string/cart_shopping" />

    <item
        android:id="@+id/nav_favourites"
        android:icon="@drawable/ic_menu_category_black"
        android:title="@string/favorites" />

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout_all" />

   <!-- <item
        android:id="@+id/nav_coupon_codes"
        android:title="My Coupon Codes"
        android:icon="@drawable/ic_menu_offer" />-->

</menu>