<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/EcommerceTheme"
    tools:context=".checkoutPayment.ShippingPagoActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abl_cart_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            layout="@layout/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/abl_cart_appbar"
        android:orientation="vertical"
        android:paddingLeft="@dimen/margin_x"
        android:paddingRight="@dimen/margin_x">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="40dp"
                android:paddingTop="@dimen/fab_margin">

                <!--START OF SHIPPING METHOD CONATINER-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/fab_margin"
                    android:orientation="horizontal"
                    android:weightSum="3">

                </LinearLayout>
                <!--END OF SHIPPING METHOD CONATINER-->

                <LinearLayout style="@style/AddressFormConatinerHalf">

                    <!--START OF EDITTEXT : FIRST NAME-->
                    <LinearLayout
                        style="@style/AddressFormConatiner"
                        android:layout_marginRight="@dimen/fab_margin_half">

                        <TextView
                            style="@style/TVAddressForm"
                            android:text="@string/input_first_name" />

                        <EditText
                            android:id="@+id/et_shipping_pfirst_name"
                            style="@style/ETAddressForm" />

                    </LinearLayout>
                    <!--START OF EDITTEXT : FIRST NAME-->

                    <!--START OF EDITTEXT : LAST NAME-->
                    <LinearLayout
                        style="@style/AddressFormConatiner"
                        android:layout_marginLeft="@dimen/fab_margin_half">

                        <TextView
                            style="@style/TVAddressForm"
                            android:text="@string/input_last_name" />

                        <EditText
                            android:id="@+id/et_shipping_plast_name"
                            style="@style/ETAddressForm" />
                    </LinearLayout>
                    <!--END OF EDITTEXT : LAST NAME-->

                </LinearLayout>


                <!--START OF EDITTEXT : ADDRESS LINE 1-->
                <LinearLayout style="@style/AddressFormConatinerFull">

                    <TextView
                        style="@style/TVAddressForm"
                        android:text="@string/input_address_1" />

                    <EditText
                        android:id="@+id/et_shipping_paddress_1"
                        style="@style/ETAddressForm" />

                </LinearLayout>
                <!--END OF EDITTEXT : ADDRESLINE 1-->

                <!--START OF EDITTEXT : ADDRESLINE 2-->
                <LinearLayout style="@style/AddressFormConatinerFull">

                    <TextView
                        style="@style/TVAddressForm"
                        android:text="@string/input_address_2" />

                    <EditText
                        android:id="@+id/et_shipping_paddress_2"
                        style="@style/ETAddressForm" />

                </LinearLayout>
                <!--END OF EDITTEXT : ADDRESLINE 2-->
                <!--START OF EDITTEXT : BUSINESS-->
                <LinearLayout style="@style/AddressFormConatinerFull">

                    <TextView
                        style="@style/TVAddressForm"
                        android:text="@string/input_pemail" />

                    <EditText
                        android:id="@+id/et_shipping_pemail"
                        style="@style/ETAddressForm"
                        android:inputType="textEmailAddress"/>

                </LinearLayout>
                <!--END OF EDITTEXT : BUSINESS -->
                <!--START OF EDITTEXT : BUSINESS-->
                <LinearLayout style="@style/AddressFormConatinerFull">

                    <TextView
                        style="@style/TVAddressForm"
                        android:text="@string/input_pmobile" />

                    <EditText
                        android:id="@+id/et_shipping_pmobile"
                        style="@style/ETAddressForm"
                        android:inputType="number"/>

                </LinearLayout>
                <!--END OF EDITTEXT : BUSINESS -->
                <!--START OF EDITTEXT : BUSINESS-->
                <LinearLayout style="@style/AddressFormConatinerFull">

                    <TextView
                        style="@style/TVAddressForm"
                        android:text="@string/input_pbusinessname" />

                    <EditText
                        android:id="@+id/et_shipping_pbusinessname"
                        style="@style/ETAddressForm" />

                </LinearLayout>
                <!--END OF EDITTEXT : BUSINESS -->

                <LinearLayout style="@style/AddressFormConatinerHalf">

                    <!--START OF EDITTEXT : CITY-->
                    <LinearLayout
                        style="@style/AddressFormConatiner"
                        android:layout_marginRight="@dimen/fab_margin_half">

                        <TextView
                            style="@style/TVAddressForm"
                            android:text="@string/input_city" />

                        <EditText
                            android:id="@+id/et_shipping_pcity"
                            style="@style/ETAddressForm" />
                    </LinearLayout>
                    <!--END OF EDITTEXT : CITY-->

                    <!--START OF EDITTEXT : DISTRICT-->
                    <LinearLayout
                        style="@style/AddressFormConatiner"
                        android:layout_marginRight="@dimen/fab_margin_half">

                        <TextView
                            style="@style/TVAddressForm"
                            android:text="@string/input_pdistrict" />

                        <EditText
                            android:id="@+id/et_shipping_pdistrict"
                            style="@style/ETAddressForm" />
                    </LinearLayout>
                    <!--END OF EDITTEXT : DISTRICT-->
                </LinearLayout>

                <LinearLayout style="@style/AddressFormConatinerHalf">

                    <!--START OF EDITTEXT : PROVINCE-->
                    <LinearLayout
                        style="@style/AddressFormConatiner"
                        android:layout_marginRight="@dimen/fab_margin_half">

                        <TextView
                            style="@style/TVAddressForm"
                            android:text="@string/input_pprovince" />

                        <EditText
                            android:id="@+id/et_shipping_pprovince"
                            style="@style/ETAddressForm" />
                    </LinearLayout>
                    <!--END OF EDITTEXT : PROVINCE-->

                    <!--START OF EDITTEXT : ZIP CODE-->
                    <LinearLayout
                        style="@style/AddressFormConatiner"
                        android:layout_marginLeft="@dimen/fab_margin_half">

                        <TextView
                            style="@style/TVAddressForm"
                            android:text="@string/input_zip" />

                        <EditText
                            android:id="@+id/et_shipping_pzip"
                            style="@style/ETAddressForm"
                            android:inputType="number"/>
                    </LinearLayout>
                    <!--END OF EDITTEXT : ZIP CODE-->

                </LinearLayout>


                <LinearLayout style="@style/AddressFormConatinerHalf">

                    <!--START OF EDITTEXT : STATE-->
                    <LinearLayout
                        style="@style/AddressFormConatiner"
                        android:layout_marginRight="@dimen/fab_margin_half">

                        <TextView
                            style="@style/TVAddressForm"
                            android:text="@string/input_state" />

                        <EditText
                            android:id="@+id/et_shipping_pstate"
                            style="@style/ETAddressForm" />
                    </LinearLayout>
                    <!--END OF EDITTEXT : STATE-->

                    <!--START OF EDITTEXT : COUNTRY-->
                    <LinearLayout
                        style="@style/AddressFormConatiner"
                        android:layout_marginLeft="@dimen/fab_margin_half">

                        <TextView
                            style="@style/TVAddressForm"
                            android:text="@string/input_country" />

                        <EditText
                            android:id="@+id/et_shipping_pcountry"
                            style="@style/ETAddressForm" />
                    </LinearLayout>
                    <!--END OF EDITTEXT : COUNTRY-->

                </LinearLayout>


                <FrameLayout
                    android:id="@+id/btn_complete_paddress"
                    style="@style/BtnWithIconLeftContainer"
                    android:layout_marginTop="@dimen/fab_margin_half"
                    android:background="@drawable/btn_round_small_primary">

                    <Button
                        android:id="@+id/btn_complete_paddress_inner"
                        style="@style/BtnWithIconLeft"
                        android:text="@string/btn_finish" />

                </FrameLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/adMobView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>


    <RelativeLayout
        android:id="@+id/pbar_container"
        style="@style/QeasyProgressBarConatiner">
        <com.wang.avi.AVLoadingIndicatorView style="@style/QeasyProgressBar" />
    </RelativeLayout>

</RelativeLayout>