<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/EcommerceTheme"
    tools:context=".userLogin.LoginActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abl_cart_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            layout="@layout/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/abl_cart_appbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--START OF LOGIN AREA-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="@dimen/fab_margin"
                android:paddingLeft="@dimen/margin_x"
                android:paddingRight="@dimen/margin_x"
                android:paddingTop="@dimen/fab_margin">

                <!--START OF LOGIN WITH PASSWORD AREA-->

                <TextView
                    android:id="@+id/tv_login_msg"
                    style="@style/validationMsg" />

                <EditText
                    android:id="@+id/et_login_email"
                    style="@style/ETRegistrationForm"
                    android:hint="Email"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:id="@+id/tv_validation_login_msg_email"
                    style="@style/validationMsg" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/fab_margin_half"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_login_password"
                            style="@style/ETRegistrationForm"
                            android:drawableRight="@drawable/bootic_logo"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:paddingLeft="52dp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageView
                        android:layout_width="@dimen/button_height"
                        android:layout_height="@dimen/button_height"
                        android:layout_alignParentBottom="true"
                        android:padding="12dp"
                        android:layout_marginLeft="5dp"
                        android:src="@drawable/ic_lock_fill_black"
                        android:alpha="0.5"/>

                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_validation_login_msg_password"
                    style="@style/validationMsg" />

                <Button
                    android:id="@+id/btn_user_sign_in"
                    style="@style/BtnPrimary"
                    android:text="@string/shop_dress_register_here" />

                <LinearLayout style="@style/BottomRegLoginConatiner"
                    android:layout_marginTop="@dimen/fab_margin_half"
                    android:gravity="right">
                    <Button
                        android:id="@+id/btn_recuperar_contraseña"
                        style="@style/BottomRegLoginWritingBtn"
                        android:text="@string/forgot_password" />

                </LinearLayout>

             <!--   <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/fab_margin_half"
                    android:gravity="right"
                    android:text="@string/forgot_password"
                    android:textColor="@color/fontLiteColor" />-->

                <!--END OF LOGIN WITH PASSWORD AREA-->


                <!--START OF SIGN UP WRITING-->

                <LinearLayout style="@style/BottomRegLoginConatiner">

                    <TextView
                        style="@style/BottomRegLoginWriting"
                        android:text="@string/dont_hv_account" />

                    <Button
                        android:id="@+id/btn_sign_up"
                        style="@style/BottomRegLoginWritingBtn"
                        android:text="@string/btn_register" />

                </LinearLayout>
                <!--END OF SIGN UP WRITING-->

                <FrameLayout
                    android:id="@+id/btn_fb_login"
                    style="@style/BtnWithIconLeftContainer"
                    android:background="@drawable/btn_round_small_facebook"
                    android:layout_marginBottom="@dimen/margin_x"
                    android:visibility="gone"
                    android:layout_marginTop="@dimen/fab_margin_double">

                    <Button
                        android:id="@+id/btn_facebook_inner"
                        style="@style/BtnWithIconLeft"
                        android:text="@string/btn_sign_in_with_facebook" />

                </FrameLayout>

                <FrameLayout
                    android:id="@+id/btn_google_login"
                    style="@style/BtnWithIconLeftContainer"
                    android:background="@drawable/btn_round_small_google"
                    android:visibility="gone">

                    <Button
                        android:id="@+id/btn_google_inner"
                        style="@style/BtnWithIconLeft"
                        android:text="@string/btn_sign_in_with_google" />

                </FrameLayout>

                <LinearLayout style="@style/BottomRegLoginConatiner">

                    <Button
                        android:id="@+id/btn_sign_ve"
                        style="@style/BtnPrimary"
                        android:text="@string/register_vendor_main_btn" />

                </LinearLayout>




            </LinearLayout>
            <!--END OF LOGIN AREA-->
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>